1.修复单元测试, 2.修复快速开始脚本, 3.调整部分依赖版本, 4.恢复嵌入式jetty main方法启动开发 5.增加用户个人信息查看,和密码修改. 6.重构common.js 7.mvn clean install 警告处理 ---------------------------- 另外吐槽一下开元项目没事就换groupId的~还有jetty的各种不兼容,各种bug...